--- a/Cypress/react_todo/package.json
+++ b/Cypress/react_todo/package.json
@@ -6,7 +6,8 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"test": "cypress open"
 	},
 	"dependencies": {
 		"firebase": "^9.17.2",
