--- a/Mocha/mongodb/package.json
+++ b/Mocha/mongodb/package.json
@@ -10,9 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chai": "^4.3.7",
     "dotenv": "^16.0.3",
-    "mocha": "^10.2.0",
-    "mongodb": "^5.2.0"
+    "mongodb": "^5.2.0",
+    "uuid": "^11.1.0"
+  },
+  "devDependencies": {
+    "chai": "^5.2.0",
+    "mocha": "^11.1.0"
   }
 }
