Added mocha test, cypress test, fix react room admin exercise

--- a/Artillery/session_store/package.json
+++ b/Artillery/session_store/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "server": "nodemon --inspect session_example.mjs",
-    "test": "cross-env DEBUG=http* artillery run session_load.yml"
+    "test": "artillery run session_load.yml"
   },
   "keywords": [],
   "author": "",
