--- a/Mocha/mongo_express_api/.gitignore
+++ b/Mocha/mongo_express_api/.gitignore
@@ -73,10 +73,10 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
+# .env
 #.env.test
-.env.*
-!.env.example
+# .env.*
+# !.env.example
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
