--- a/Mocha/mongodb/package.json
+++ b/Mocha/mongodb/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "mongodb": "^5.2.0",
+    "mongoose": "^8.20.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
